src/objects/DefaultEventValues__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BST_BAX_SALES_TEAM__c</fullName>
        <label>BST_BAX_SALES_TEAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_BEST_OUTCOME__c</fullName>
        <label>BST_BEST_OUTCOME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_CALL_OBJ__c</fullName>
        <label>BST_CALL_OBJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BST_MIN_OUTCOME__c</fullName>
        <label>BST_MIN_OUTCOME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Default Event Values</label>
</CustomObject>